# VMEvalKit

./: .gitignore  .gitmodules  CONTRIBUTING.md  CURRENT_STATUS.md  DOCUMENTATION_UPDATES.md  QUICK_START.md  README.md  WAVESPEED_ANALYSIS.md  api_test_results.json  env.template  fix_all_tasks.sh  install_output.txt  pyproject.toml  requirements.txt  run_infer.py  run_inference.py  run_object_trajectory.sh  run_opensource_inference.sh  setup.py  test_api_capabilities.py  test_template_ids.py
.cursor/rules/: basic.mdc  eval.mdc  goal.mdc  stepbystep.mdc
analysis/: plot.py  stats.py
data/: .gitattributes  README.md  hf_sync.py  s3_sync.py
docs/: ADDING_MODELS.md  ADDING_TASKS.md  ARCHITECTURE.md  DATA_MANAGEMENT.md  HF_Support.md  INFERENCE.md  MODELS.md  SCORING.md  SGLANG_SETUP.md  STRUCTURED_OUTPUT_MIGRATION.md
docs/models/: README.md
docs/tasks/: README.md
examples/: create_questions.py  evaluate_compatible_models.py  experiment_2025-10-14.py  generate_videos.py  pilot_experiment.py  run_evaluation.py  runway_analysis.py  score_videos.py  simple_inference.py  veo_analysis.py
examples/opensource/: ltx_video.sh  svd.sh
output/raven_test/puzzle_0000/: metadata.json
output/raven_test/puzzle_0001/: metadata.json
output/raven_test/puzzle_0002/: metadata.json
output/raven_test/puzzle_0003/: metadata.json
output/raven_test/puzzle_0004/: metadata.json
paper/assets/: sora_chess_example_12frames.eps  sora_maze_example_12frames.eps  sora_raven_example_12frames.eps  sora_rotation_example_12frames.eps  sora_sudoku_example_12frames.eps
script/: lmdeploy_server.sh
setup/: PORTABILITY_BEST_PRACTICES.md
setup/lib/: share.sh
setup/models/LTX-2/: setup.sh
setup/models/dynamicrafter-512/: setup.sh
setup/models/hunyuan-video-i2v/: setup.sh
setup/models/morphic-frames-to-video/: setup.sh
setup/models/openai-sora-2-pro/: setup.sh
setup/models/runway-gen3a-turbo/: setup.sh
setup/models/runway-gen4-aleph/: setup.sh
setup/models/sana/: setup.sh
setup/models/veo-2.0-generate/: setup.sh
setup/models/veo-3.0-fast-generate/: setup.sh
setup/models/veo-3.1-generate/: setup.sh
setup/models/videocrafter2-512/: setup.sh
setup/models/wan/: setup.sh
setup/models/wan-2.1-i2v-480p/: setup.sh
setup/models/wan-2.1-i2v-720p/: setup.sh
setup/models/wan-2.2-i2v-a14b/: setup.sh
setup/models/wan-2.2-ti2v-5b/: setup.sh
vmevalkit/: __init__.py
vmevalkit/api_clients/: __init__.py  luma_client.py  runway_client.py  veo_client.py  wavespeed_client.py
vmevalkit/core/: __init__.py  evaluator.py  model_registry.py  task_loader.py
vmevalkit/eval/: README.md  __init__.py  base.py  consistency.py  eval_prompt.py  frame_sampler.py  gpt4o_eval.py  human_eval.py  internvl.py  multiframe_eval.py  qwen3vl.py  run_selector.py  voting.py
vmevalkit/models/: __init__.py  base.py  cogvideox_inference.py  dynamicrafter_inference.py  emu_inference.py  hunyuan_inference.py  ltx2_inference.py  ltx_inference.py  luma_inference.py  morphic_inference.py  openai_inference.py  runway_inference.py  sana_inference.py  sglang_inference.py  svd_inference.py  veo_inference.py  videocrafter_inference.py  wan_inference.py  wavespeed_inference.py
vmevalkit/runner/: MODEL_CATALOG.py  TASK_CATALOG.py  __init__.py  create_dataset.py  dataset.py  inference.py  retriever.py  score.py
vmevalkit/tasks/: __init__.py
vmevalkit/tasks/arc_task_peter/: ARC.md  PROMPTS.py  __init__.py  arc_reasoning.py
vmevalkit/tasks/chess_task/: CHESS.md  chess_reasoning.py
vmevalkit/tasks/clock_task/: PROMPTS.py  README.md  __init__.py  clock_reasoning.py
vmevalkit/tasks/counting_circles_task/: counting_circles.py
vmevalkit/tasks/dice_2d_task/: dice_reasoning.py
vmevalkit/tasks/dot_to_dot_task/: SCALING_PLAN.md
vmevalkit/tasks/letter_counting_task/: letter_counting.py
vmevalkit/tasks/light_sequence_task/: README.md  __init__.py
vmevalkit/tasks/maze_task/: MAZE.md  __init__.py  maze_reasoning.py
vmevalkit/tasks/nonogram_task/: NONOGRAM.md  PROMPTS.py  __init__.py  nonogram_reasoning.py  test_nonogram.py
vmevalkit/tasks/object_permanence_task/: PROMPTS.py  object_permanence_reasoning.py
vmevalkit/tasks/object_subtraction_task/: OBJECT_SUBTRACTION.md  PROMPTS.py  object_subtraction_reasoning.py
vmevalkit/tasks/raven_task/: RAVEN.md  __init__.py  batch_generate.py  (+2 more)
vmevalkit/utils/: __init__.py  constant.py  retry_config.py  s3_uploader.py
web/templates/: index.html
(+26 files in other folders)
