[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vmevalkit"
version = "0.1.0"
description = "A unified inference and evaluation framework for video generation models"
readme = "README.md"
authors = [
    {name = "VMEvalKit Team", email = "hokinxqdeng@gmail.com"}
]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "tqdm>=4.66.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.0",
    "runwayml>=3.17.0",
    "google-cloud-aiplatform>=1.38.0",
    "google-cloud-storage>=2.10.0",
    "google-auth>=2.23.0",
    "google-auth-httplib2>=0.1.1",
    "imageio>=2.33.0",
    "imageio-ffmpeg>=0.4.9",
    "moviepy>=1.0.3",
    "cairosvg>=2.7.0",
    "scikit-image>=0.22.0",
    "scipy>=1.11.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pandas>=2.1.0",
    "gradio>=4.0.0",
    "loguru>=0.7.2",
    "rich>=13.7.0",
    "boto3>=1.34.0",
    "huggingface_hub>=0.24.0",
    "datasets>=2.18.0",
    "pyarrow>=14.0.2",
    "transformers>=4.55.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0", 
    "mypy>=1.7.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0"
]

[project.urls]
Homepage = "https://github.com/hokindeng/VMEvalKit"
"Bug Reports" = "https://github.com/hokindeng/VMEvalKit/issues"
Source = "https://github.com/hokindeng/VMEvalKit"

[tool.setuptools.packages.find]
include = ["vmevalkit*"]
