[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vmevalkit"
version = "0.1.0"
description = "A unified inference and evaluation framework for video generation models"
readme = "README.md"
authors = [
    {name = "VMEvalKit Team", email = "hokinxqdeng@gmail.com"}
]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    # Core inference dependencies
    "numpy>=1.24.0",
    "Pillow>=10.0.0", 
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    
    # API client dependencies
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0", 
    "tenacity>=8.2.0",
    "runwayml>=3.17.0",
    
    # Google Cloud for Veo models
    "google-cloud-aiplatform>=1.38.0",
    "google-auth>=2.23.0",
    
    # Evaluation dependencies
    "opencv-python>=4.8.0",  # GPT-4O eval extracts video frames
    "gradio>=4.0.0",         # Human evaluation interface
    "pandas>=2.1.0",         # Evaluation result processing
    
    # S3 for API models (Luma needs image URLs)
    "boto3>=1.34.0",
    
    # Progress and logging
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0", 
    "mypy>=1.7.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0"
]

[project.urls]
Homepage = "https://github.com/hokindeng/VMEvalKit"
"Bug Reports" = "https://github.com/hokindeng/VMEvalKit/issues"
Source = "https://github.com/hokindeng/VMEvalKit"

[tool.setuptools.packages.find]
include = ["vmevalkit*"]
